<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motionLayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/motion_scene_detail_screen"
            tools:context=".DetailActivity"
            tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/file_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/file_name"
            android:textSize="@dimen/detail_screen_text_size"
            android:layout_margin="@dimen/medium_spacing" />
        <TextView
            android:id="@+id/file_name_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/backgroundColor"
            android:textSize="@dimen/detail_screen_text_size"
            android:layout_marginStart="@dimen/big_spacing"
            app:layout_constraintTop_toTopOf="@id/file_name_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/file_name_title"
            tools:text="@string/glide_image_library"/>

        <TextView
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/file_name_title"
            app:layout_constraintTop_toBottomOf="@id/file_name_title"
            android:layout_marginTop="@dimen/big_spacing"
            android:textSize="@dimen/detail_screen_text_size"
            android:text="@string/status"/>
        <TextView
            android:id="@+id/status_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/backgroundColor"
            app:layout_constraintTop_toTopOf="@id/status_title"
            app:layout_constraintEnd_toEndOf="@id/file_name_content"
            app:layout_constraintStart_toStartOf="@id/file_name_content"
            android:textSize="@dimen/detail_screen_text_size"
            tools:text="Success"/>

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:layout_margin="@dimen/spacing_24"
            android:text="@string/ok"
            android:textSize="@dimen/default_text_size"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>